Updated project documentation. Added grunt-tasks for ease of management individual tasks. Added deploy directory to store compiled version. Added msbuild batch file to build dotnet project from command line.

--- a/DOTNET/Khws.Project.Web/Khws.Project.Web.csproj
+++ b/DOTNET/Khws.Project.Web/Khws.Project.Web.csproj
@@ -134,8 +134,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\css\bootstrap-theme.min.css" />
-    <Content Include="assets\css\bootstrap.min.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="assets\js\vendor.js" />
@@ -176,6 +174,7 @@
     <Content Include="assets\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Views\Shared\_Dashboard.cshtml" />
     <Content Include="Views\Form\ThankYou.cshtml" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
