--- a/UI/package.json
+++ b/UI/package.json
@@ -16,5 +16,10 @@
     "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.4.1",
     "grunt-processhtml": "^0.3.13"
+  },
+  "devDependencies": {
+    "assemble": "^0.9.2",
+    "grunt-processhtml": "^0.3.13",
+    "time-grunt": "^1.3.0"
   }
 }
