--- a/DOTNET/Khws.Project.Web/packages.config
+++ b/DOTNET/Khws.Project.Web/packages.config
@@ -23,4 +23,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" />
 </packages>
