--- a/UI/package.json
+++ b/UI/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "assemble": "^0.9.2",
+    "grunt-contrib-connect": "^1.0.1",
     "grunt-processhtml": "^0.3.13",
     "time-grunt": "^1.3.0"
   }
